[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/polycat.dae" type="PackedScene" id=2]
[ext_resource path="res://Assets/crosshair.png" type="Texture" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.420354
height = 0.7

[sub_resource type="SpatialMaterial" id=2]
metallic = 0.25

[sub_resource type="Environment" id=3]
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="SphereShape" id=4]

[node name="Player" type="KinematicBody" groups=[
"Player",
"damage_taker",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.752722, 0, 0, 0, -2.91763e-08, -1, 0, 0.667475, -4.37114e-08, 0, 0.692707, 0 )
shape = SubResource( 1 )

[node name="CamBase" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06599, 0 )

[node name="GraphicsBase" type="Spatial" parent="CamBase"]

[node name="Graphics" parent="CamBase/GraphicsBase" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1.06599, 0 )

[node name="Cone" parent="CamBase/GraphicsBase/Graphics/Armature/Skeleton" index="0"]
transform = Transform( 1, 0, -2.13163e-14, 0, 1, 0, 2.13163e-14, 0, 1, 0, 0, 0 )
material/0 = SubResource( 2 )

[node name="AnimationPlayer" parent="CamBase/GraphicsBase/Graphics" index="1"]
playback_default_blend_time = 0.1

[node name="Hand" type="Spatial" parent="CamBase/GraphicsBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.337, -0.536 )

[node name="ClippedCamera" type="ClippedCamera" parent="CamBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.475562, 0.409213, 2.196 )
environment = SubResource( 3 )
current = true

[node name="Crosshair" type="TextureRect" parent="CamBase/ClippedCamera"]
margin_left = 492.0
margin_top = 280.0
margin_right = 532.0
margin_bottom = 320.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo_display" type="RichTextLabel" parent="CamBase/ClippedCamera"]
margin_left = 929.917
margin_top = 548.0
margin_right = 998.917
margin_bottom = 588.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Health_display" type="RichTextLabel" parent="CamBase/ClippedCamera"]
margin_left = 23.811
margin_top = 552.762
margin_right = 92.811
margin_bottom = 592.762
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RayCast" type="RayCast" parent="CamBase/ClippedCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.194 )
enabled = true
cast_to = Vector3( 0, 0, -120 )

[node name="ScatterCast" type="Spatial" parent="CamBase/ClippedCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.1 )
visible = false

[node name="RayCast" type="RayCast" parent="CamBase/ClippedCamera/ScatterCast"]
cast_to = Vector3( 0.03, -0.2, -45 )

[node name="RayCast2" type="RayCast" parent="CamBase/ClippedCamera/ScatterCast"]
cast_to = Vector3( 1, -0.2, -45 )

[node name="RayCast3" type="RayCast" parent="CamBase/ClippedCamera/ScatterCast"]
cast_to = Vector3( -0.5, -0.2, -45 )

[node name="RayCast4" type="RayCast" parent="CamBase/ClippedCamera/ScatterCast"]
cast_to = Vector3( -0.01, -1, -45 )

[node name="RayCast5" type="RayCast" parent="CamBase/ClippedCamera/ScatterCast"]
cast_to = Vector3( -0.01, -0.5, -45 )

[node name="RayCast6" type="RayCast" parent="CamBase/ClippedCamera/ScatterCast"]
cast_to = Vector3( 0.4, -0.5, -45 )

[node name="TimerOverlay" type="Timer" parent="CamBase/ClippedCamera"]
wait_time = 0.07
one_shot = true

[node name="ColorOverlay" type="ColorRect" parent="CamBase/ClippedCamera"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CamBase/ClippedCamera"]
visible = false
margin_left = 17.0
margin_top = 11.0
margin_right = 998.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsolePrint" type="RichTextLabel" parent="CamBase/ClippedCamera"]
margin_left = 17.0
margin_top = 35.0
margin_right = 998.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsoleTimer" type="Timer" parent="CamBase/ClippedCamera"]
wait_time = 9.0

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.678353, 0 )
shape = SubResource( 4 )

[connection signal="timeout" from="CamBase/ClippedCamera/TimerOverlay" to="." method="_on_TimerOverlay_timeout"]
[connection signal="focus_entered" from="CamBase/ClippedCamera/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="CamBase/ClippedCamera/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="timeout" from="CamBase/ClippedCamera/ConsoleTimer" to="." method="_on_ConsoleTimer_timeout"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]

[editable path="CamBase/GraphicsBase/Graphics"]
